[gd_scene load_steps=5 format=3 uid="uid://chu4fvc7h3y0f"]

[ext_resource type="PackedScene" uid="uid://dg3ikms7niw6" path="res://Scenes/SettingsPage/collapsible_setting_base.tscn" id="1_7ue3w"]
[ext_resource type="Script" path="res://Scenes/SettingsPage/Scripts/ice_cream_dice_themes_setting.gd" id="2_1a0vl"]
[ext_resource type="Theme" uid="uid://cfefgu8jbb3xm" path="res://Resources/Styles/default_theme.tres" id="3_yw0xw"]
[ext_resource type="PackedScene" uid="uid://ds66lujjolvu" path="res://Scenes/SettingsPage/theme_list_item.tscn" id="4_of85e"]

[node name="IceCreamDiceThemesSetting" instance=ExtResource("1_7ue3w")]
script = ExtResource("2_1a0vl")

[node name="CollapsibleContainer" parent="TopLevelContainer" index="1"]
visible = false

[node name="ThemeContainer" type="VBoxContainer" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection" index="0"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -107.5
offset_bottom = 107.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_yw0xw")
theme_override_constants/separation = 5
alignment = 1

[node name="CreamsicleTheme" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ThemeContainer" index="0" instance=ExtResource("4_of85e")]
layout_mode = 2
size_flags_vertical = 4
die_theme_name = "creamsicle"

[node name="MintChocolateTheme" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ThemeContainer" index="1" instance=ExtResource("4_of85e")]
layout_mode = 2
size_flags_vertical = 4
die_theme_name = "mint_chocolate"

[node name="SherbertTheme" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ThemeContainer" index="2" instance=ExtResource("4_of85e")]
layout_mode = 2
size_flags_vertical = 4
die_theme_name = "sherbert"

[node name="SupermanTheme" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ThemeContainer" index="3" instance=ExtResource("4_of85e")]
layout_mode = 2
size_flags_vertical = 4
die_theme_name = "superman"
